edición de sass

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <meta name="description" content="XEROX es una página dedicada a la venta de los mejores comics, mangas, videojuegos y más. Encontrá las mejores ofertas y precios para tus productos favoritos. Envios a todo el país.">
+    <meta name="keywords" content="MANGA, MANGAS, COMIC, COMICS, MANGA PRECIO, PS4, PS5, ONE PIECE, YUGIOH">
+    <title>XEROX | Inicio</title>
 </head>
 
 <body>
@@ -49,27 +51,25 @@
         </nav>
 
         <div class="collapse navbarLinks" id="navbarToggleExternalContent">
-            <div>
-                <nav>
-                    <ul class="xeroxNav1">
-                        <li class="xeroxLista1 ">
-                            <a class="text-white" href="./paginas/comics.html">COMICS</a>
-                        </li>
-                        <li class="xeroxLista1">
-                            <a class="text-white" href="./paginas/manga.html">MANGAS</a>
-                        </li>
-                        <li class="xeroxLista1">
-                            <a class="text-white" href="./paginas/videojuegos.html">VIDEOJUEGOS</a>
-                        </li>
-                        <li class="xeroxLista1">
-                            <a class="text-white" href="./paginas/juegosdecartas.html">CARTAS</a>
-                        </li>
-                        <li class="xeroxLista1">
-                            <a class="text-white" href="./paginas/contactos.html">CONTACTOS</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
+            <nav>
+                <ul class="xeroxNav1">
+                    <li class="xeroxLista1 ">
+                        <a class="text-white" href="./paginas/comics.html">COMICS</a>
+                    </li>
+                    <li class="xeroxLista1">
+                        <a class="text-white" href="./paginas/manga.html">MANGAS</a>
+                    </li>
+                    <li class="xeroxLista1">
+                        <a class="text-white" href="./paginas/videojuegos.html">VIDEOJUEGOS</a>
+                    </li>
+                    <li class="xeroxLista1">
+                        <a class="text-white" href="./paginas/juegosdecartas.html">CARTAS</a>
+                    </li>
+                    <li class="xeroxLista1">
+                        <a class="text-white" href="./paginas/contactos.html">CONTACTOS</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </header>
 
@@ -93,26 +93,26 @@
 
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./img/14caa8274fc227ae72a0ba394462db2f811e61e6.webp" class="d-block w-100" alt="portada videojuegos ofertas">
+                        <img src="./img/14caa8274fc227ae72a0ba394462db2f811e61e6-modified.webp" class="d-block w-100" alt="portada videojuegos ofertas">
                         <div class="carousel-caption d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                            <h5>25% OFF con tu precompra</h5>
+                            <p>Oferta de lanzamiento: The Last Of Us Part 1</p>
                         </div>
                     </div>
 
                     <div class="carousel-item">
-                        <img src="./img/Dc-Comics.jpg" class="d-block w-100" alt="portada comics ofertas">
+                        <img src="./img/Dc-Comics-modified.jpg" class="d-block w-100" alt="portada comics ofertas">
                         <div class="carousel-caption d-md-block">
-                            <h5>Ofertas en Comics</h5>
-                            <p></p>
+                            <h5>Hasta un 35% OFF</h5>
+                            <p>Ofertas en Comics</p>
                         </div>
                     </div>
 
                     <div class="carousel-item">
-                        <img src="./img/portada-manga-rock.jpg" class="d-block w-100" alt="portada manga ofertas">
+                        <img src="./img/portada-manga-rock-modified.jpg" class="d-block w-100" alt="portada manga ofertas">
                         <div class="carousel-caption d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                            <h5>Hasta un 40% OFF</h5>
+                            <p>Ofertas en Mangas</p>
                         </div>
                     </div>
                 </div>
@@ -162,9 +162,9 @@
 
     <footer>matiaslofiego@gmail.com
         <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank" class="footerRedes"><img
-                src="./img/icons8-instagram.svg" alt=""></a>
+                src="./img/icons8-instagram.svg" alt="icono instagram"></a>
         <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img
-                src="./img/icons8-facebook.svg" alt=""></a>
+                src="./img/icons8-facebook.svg" alt="icono facebook"></a>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
