--- a/paginas/comics.html
+++ b/paginas/comics.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+    <meta name="description" content="Encontrá tus comics favoritos en XEROX a los mejores precios. Envios a todo el país.">
+    <meta name="keywords" content="comic, comics, marvel, marvel comics, dc, dc comics, batman, batman comics, justice league comics, liga de la justicia, liga de la justicia comics, avengers, avengers comics, vengadores, vengadores comics">
+    <title>XEROX | Comics</title>
 </head>
 
 <body>
@@ -86,7 +88,6 @@
                 <p>COMICS</p>
             </section>
 
-            <h2>Comics</h2>
             <ul class="row" class="container-fluid">
                 <li class="imagenLista col-lg-2 col-md-3 col-sm-9">
                     <img src="../img/batman_broma_asesina_deluxe_pvc.jpg" alt="Batman broma asesina portada 1">
@@ -113,20 +114,15 @@
                     <h3> IDW TMNT #1</h3>
                     <h4>$5000</h4>
                 </li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
             </ul>
         </section>
     </main>
 
     <footer>matiaslofiego@gmail.com
         <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank" class="footerRedes"><img
-                src="../img/icons8-instagram.svg" alt=""></a>
+                src="../img/icons8-instagram.svg" alt="icono instagram"></a>
         <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img
-                src="../img/icons8-facebook.svg" alt=""></a>
+                src="../img/icons8-facebook.svg" alt="icono facebook"></a>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
