--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+    <meta name="description" content="Contactanos y dejanos tu comentario, consulta o queja sobre nuestro servicio.">
+    <meta name="keywords" content="contacto, contactos, xerox contactos, xerox intagram, xerox facebook, xerox mail">
+    <title>XEROX | Contactos</title>
 </head>
 
 <body>
@@ -73,11 +75,10 @@
         </div>
     </header>
 
-    <main class="contactoMain overflow-hidden">
-
+    <main class="overflow-hidden">
         <div class="contactoDiv">
-            <ul class="contactoNav">
-                <li class="contactoComentario">
+            <ul>
+                <li>
                     <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank">
                         <img src="../img/icons8-facebook.svg" alt="icono Facebook">Siguenos en Facebook</a>
                 </li>
@@ -151,9 +152,9 @@
 
     <footer>matiaslofiego@gmail.com
         <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank" class="footerRedes"><img
-                src="../img/icons8-instagram.svg" alt=""></a>
+                src="../img/icons8-instagram.svg" alt="icono instagram"></a>
         <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img
-                src="../img/icons8-facebook.svg" alt=""></a>
+                src="../img/icons8-facebook.svg" alt="icono facebook"></a>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
