--- a/paginas/juegosdecartas.html
+++ b/paginas/juegosdecartas.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+    <meta name="description" content="Encontrá tu colección favorita de cartas en XEROX a los mejores precios. Envios a todo el país.">
+    <meta name="keywords" content="Yugioh, yugioh deck, deck, magic, magic the gathering, pokemon cartas, pokemon card game, pokemon card">
+    <title>XEROX | Juegos de Cartas</title>
 </head>
 
 <body>
@@ -75,7 +77,6 @@
 
     <main class="overflow-hidden">
         <section>
-
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Inicio</a></li>
@@ -87,7 +88,6 @@
                 <p>JUEGOS DE CARTAS</p>
             </section>
 
-            <h2>Juegos de Cartas</h2>
             <ul class="row">
                 <li class="imagenLista col-lg-2 col-md-3 col-sm-4 ">
                     <img src="../img/ETCO_display_EN-600x600.jpg" alt="YUGIOH Eternity Code portada"
@@ -112,9 +112,9 @@
 
     <footer>matiaslofiego@gmail.com
         <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank" class="footerRedes"><img
-                src="../img/icons8-instagram.svg" alt=""></a>
+                src="../img/icons8-instagram.svg" alt="icono instagram"></a>
         <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img
-                src="../img/icons8-facebook.svg" alt=""></a>
+                src="../img/icons8-facebook.svg" alt="icono facebook"></a>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
