--- a/paginas/videojuegos.html
+++ b/paginas/videojuegos.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+    <meta name="description" content="Encontrá tus videojuegos favoritos en XEROX a los mejores precios. Envios a todo el país.">
+    <meta name="keywords" content="PS4, PS5, FIFA, call of duty, juegos, videojuegos, playstation">
+    <title>XEROX | Videojuegos</title>
 </head>
 
 <body>
@@ -86,7 +88,6 @@
                 <p>VIDEOJUEGOS</p>
             </section>
 
-            <h2>Videojuegos</h2>
             <ul class="row">
                 <li class="imagenLista col-lg-2 col-md-3 col-sm-4">
                     <img src="../img/the-last-of-us-parte-i-202261012304123_1.jpg" alt="The Last of Us Part 1 portada">
@@ -120,9 +121,9 @@
 
     <footer>matiaslofiego@gmail.com
         <a href="https://www.instagram.com/matiaslofiegoo/" target="_blank" class="footerRedes"><img
-                src="../img/icons8-instagram.svg" alt=""></a>
+                src="../img/icons8-instagram.svg" alt="icono instagram"></a>
         <a href="https://www.facebook.com/matiasezequiel.lofiego/" target="_blank" class="footerRedes"><img
-                src="../img/icons8-facebook.svg" alt=""></a>
+                src="../img/icons8-facebook.svg" alt="icono facebook"></a>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
