edición menor en contactos

--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -91,7 +91,8 @@
                         <img src="../img/icons8-mensaje-relleno-32.png" alt="icono mail">matiaslofiego@gmail.com</a>
                 </li>
                 <li class="contactoComentario">
-                    <img src="../img/icons8-incoming-call-30.png" alt="icono llamada">(+54) 11-2668-2533</a>
+                    <a href="tel: (11) 2668-2533">
+                        <img src="../img/icons8-incoming-call-30.png" alt="icono llamada">(+54) 11-2668-2533</a>
                 </li>
             </ul>
 
