--- a/paginas/juegosdecartas.html
+++ b/paginas/juegosdecartas.html
@@ -79,7 +79,7 @@
         <section>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#">Inicio</a></li>
+                    <li class="breadcrumb-item"><a href="../index.html">Inicio</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Cartas</li>
                 </ol>
             </nav>
