--- a/index.html
+++ b/index.html
@@ -20,57 +20,35 @@
             </a>
         </h1>
 
-        <nav class="row">
-            <ul class="xeroxNav">
-                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
-                    <a href="./paginas/comics.html">COMICS</a>
-                </li>
-                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
-                    <a href="./paginas/manga.html">MANGAS</a>
-                </li>
-                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
-                    <a href="./paginas/videojuegos.html">VIDEOJUEGOS</a>
-                </li>
-                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
-                    <a href="./paginas/juegosdecartas.html">CARTAS</a>
-                </li>
-                <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
-                    <a href="./paginas/contactos.html">CONTACTOS</a>
-                </li>
-            </ul>
-        </nav>
-
-        <nav class="navbar divInicio">
-            <div class="container-fluid">
+        <nav class="navbar">
+            <div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
+                <div class="collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto">
+                        <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
+                            <a href="./paginas/comics.html">COMICS</a>
+                        </li>
+                        <li class="xeroxLista col-lg-2 col-md-3 col-sm-4 ">
+                            <a href="./paginas/manga.html">MANGAS</a>
+                        </li>
+                        <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
+                            <a href="./paginas/videojuegos.html">VIDEOJUEGOS</a>
+                        </li>
+                        <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
+                            <a href="./paginas/juegosdecartas.html">CARTAS</a>
+                        </li>
+                        <li class=" xeroxLista col-lg-2 col-md-3 col-sm-4">
+                            <a href="./paginas/contactos.html">CONTACTOS</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
-
-        <div class="collapse navbarLinks" id="navbarToggleExternalContent">
-            <nav>
-                <ul class="xeroxNav1">
-                    <li class="xeroxLista1 ">
-                        <a class="text-white" href="./paginas/comics.html">COMICS</a>
-                    </li>
-                    <li class="xeroxLista1">
-                        <a class="text-white" href="./paginas/manga.html">MANGAS</a>
-                    </li>
-                    <li class="xeroxLista1">
-                        <a class="text-white" href="./paginas/videojuegos.html">VIDEOJUEGOS</a>
-                    </li>
-                    <li class="xeroxLista1">
-                        <a class="text-white" href="./paginas/juegosdecartas.html">CARTAS</a>
-                    </li>
-                    <li class="xeroxLista1">
-                        <a class="text-white" href="./paginas/contactos.html">CONTACTOS</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
     </header>
 
     <main class="overflow-hidden">
