--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
 
     <main class="overflow-hidden">
-        <section>
+        <section class="sectionMain">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item active" aria-current="page">Inicio</li>
