--- a/paginas/juegosdecartas.html
+++ b/paginas/juegosdecartas.html
@@ -52,7 +52,7 @@
     </header>
 
     <main class="overflow-hidden">
-        <section>
+        <section class="sectionMain">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="../index.html">Inicio</a></li>
