--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
-    <meta name="description" content="XEROX es una página dedicada a la venta de los mejores comics, mangas, videojuegos y más. Encontrá las mejores ofertas y precios para tus productos favoritos. Envios a todo el país.">
+    <meta name="description"
+        content="XEROX es una página dedicada a la venta de los mejores comics, mangas, videojuegos y más. Encontrá las mejores ofertas y precios para tus productos favoritos. Envios a todo el país.">
     <meta name="keywords" content="MANGA, MANGAS, COMIC, COMICS, MANGA PRECIO, PS4, PS5, ONE PIECE, YUGIOH">
     <title>XEROX | Inicio</title>
 </head>
@@ -23,8 +24,8 @@
         <nav class="navbar">
             <div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -71,7 +72,8 @@
 
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./img/14caa8274fc227ae72a0ba394462db2f811e61e6-modified.webp" class="d-block w-100" alt="portada videojuegos ofertas">
+                        <img src="./img/14caa8274fc227ae72a0ba394462db2f811e61e6-modified.webp" class="d-block w-100"
+                            alt="portada videojuegos ofertas">
                         <div class="carousel-caption d-md-block">
                             <h5>25% OFF con tu precompra</h5>
                             <p>Oferta de lanzamiento: The Last Of Us Part 1</p>
@@ -79,7 +81,8 @@
                     </div>
 
                     <div class="carousel-item">
-                        <img src="./img/portadas-marvel-los-60-destacada-2-modified.jpg" class="d-block w-100" alt="portada comics ofertas">
+                        <img src="./img/portadas-marvel-los-60-destacada-2-modified.jpg" class="d-block w-100"
+                            alt="portada comics ofertas">
                         <div class="carousel-caption d-md-block">
                             <h5>Hasta un 35% OFF</h5>
                             <p>Ofertas en Comics</p>
@@ -87,7 +90,8 @@
                     </div>
 
                     <div class="carousel-item">
-                        <img src="./img/portada-manga-rock-modified.jpg" class="d-block w-100" alt="portada manga ofertas">
+                        <img src="./img/portada-manga-rock-modified.jpg" class="d-block w-100"
+                            alt="portada manga ofertas">
                         <div class="carousel-caption d-md-block">
                             <h5>Hasta un 40% OFF</h5>
                             <p>Ofertas en Mangas</p>
@@ -148,7 +152,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
         </script>
-
 </body>
 
 </html>
