aplicación de menu desplegable responsive

--- a/index.html
+++ b/index.html
@@ -30,20 +30,28 @@
                 </button>
 
                 <div class="collapse" id="navbarSupportedContent">
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            CATEGORÍAS
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li class="xeroxLista1 col-lg-2 col-md-3 col-sm-4">
+                                <a class="dropdown-item " href="./paginas/comics.html">COMICS</a>
+                            </li>
+                            <li class="xeroxLista1 col-lg-2 col-md-3 col-sm-4">
+                                <a class="dropdown-item" href="./paginas/manga.html">MANGAS</a>
+                            </li>
+                            <li class="xeroxLista1 col-lg-2 col-md-3 col-sm-4">
+                                <a class="dropdown-item" href="./paginas/videojuegos.html">VIDEOJUEGOS</a>
+                            </li>
+                            <li class="xeroxLista1 col-lg-2 col-md-3 col-sm-4">
+                                <a class="dropdown-item" href="./paginas/juegosdecartas.html">CARTAS</a>
+                            </li>
+                        </ul>
+                    </div>
                     <ul class="navbar-nav me-auto">
                         <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
-                            <a href="./paginas/comics.html">COMICS</a>
-                        </li>
-                        <li class="xeroxLista col-lg-2 col-md-3 col-sm-4 ">
-                            <a href="./paginas/manga.html">MANGAS</a>
-                        </li>
-                        <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
-                            <a href="./paginas/videojuegos.html">VIDEOJUEGOS</a>
-                        </li>
-                        <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
-                            <a href="./paginas/juegosdecartas.html">CARTAS</a>
-                        </li>
-                        <li class=" xeroxLista col-lg-2 col-md-3 col-sm-4">
                             <a href="./paginas/contactos.html">CONTACTOS</a>
                         </li>
                     </ul>
