--- a/paginas/videojuegos.html
+++ b/paginas/videojuegos.html
@@ -23,26 +23,34 @@
         <nav class="navbar">
             <div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
                 <div class="collapse" id="navbarSupportedContent">
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            CATEGORÍAS
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li class="xeroxLista1 col-lg-2 col-md-3 col-sm-4">
+                                <a class="dropdown-item " href="./comics.html">COMICS</a>
+                            </li>
+                            <li class="xeroxLista1 col-lg-2 col-md-3 col-sm-4">
+                                <a class="dropdown-item" href="./manga.html">MANGAS</a>
+                            </li>
+                            <li class="xeroxLista1 col-lg-2 col-md-3 col-sm-4">
+                                <a class="dropdown-item" href="./videojuegos.html">VIDEOJUEGOS</a>
+                            </li>
+                            <li class="xeroxLista1 col-lg-2 col-md-3 col-sm-4">
+                                <a class="dropdown-item" href="./juegosdecartas.html">CARTAS</a>
+                            </li>
+                        </ul>
+                    </div>
                     <ul class="navbar-nav me-auto">
                         <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
-                            <a href="./comics.html">COMICS</a>
-                        </li>
-                        <li class="xeroxLista col-lg-2 col-md-3 col-sm-4 ">
-                            <a href="./manga.html">MANGAS</a>
-                        </li>
-                        <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
-                            <a href="./videojuegos.html">VIDEOJUEGOS</a>
-                        </li>
-                        <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
-                            <a href="./juegosdecartas.html">CARTAS</a>
-                        </li>
-                        <li class=" xeroxLista col-lg-2 col-md-3 col-sm-4">
                             <a href="./contactos.html">CONTACTOS</a>
                         </li>
                     </ul>
