cambio de lista a cards y borrado de imagenes

--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -76,7 +76,7 @@
                 </li>
                 <li class="contactoComentario">
                     <a href="tel: (11) 2668-2533">
-                        <img src="../img/icons8-incoming-call-30.png" alt="icono llamada">(+54) 11-2668-2533</a>
+                        <img src="../img/icons8-whatsapp.svg" alt="icono whatsapp">(+54) 11-2668-2533</a>
                 </li>
             </ul>
 
