--- a/index.html
+++ b/index.html
@@ -119,34 +119,150 @@
             </div>
 
             <h2>Recomendados</h2>
-            <ul class="row">
-                <li class="imagenLista col-lg-2 col-md-3 col-sm-4">
-                    <img src="./img/bleachremix011-db5742e66babce6afa16730621958737-640-0.webp"
-                        alt="bleach remix #1 portada">
-                    <h3>Bleach Remix #1</h3>
-                    <h4>$3600</h4>
-                </li>
-                <li class="imagenLista col-lg-2 col-md-3 col-sm-4">
-                    <img src="./img/batman_broma_asesina_deluxe_pvc.jpg" alt="Batman broma asesina portada 1">
-                    <h3>Batman The Killing Joke</h3>
-                    <h4>$5000</h4>
-                </li>
-                <li class="imagenLista col-lg-2 col-md-3 col-sm-4">
-                    <img src="./img/Portada_God_of_War_Ragnarok.webp" alt="God of War Ragnarok portada">
-                    <h3>God of war ragnarok</h3>
-                    <h4>$15000</h4>
-                </li>
-                <li class="imagenLista col-lg-2 col-md-3 col-sm-4">
-                    <img src="./img/the-last-of-us-parte-i-202261012304123_1.jpg" alt="The Last of Us Part 1 portada">
-                    <h3>the last of us part 1 PS5</h3>
-                    <h4>$15000</h4>
-                </li>
-                <li class="imagenLista col-lg-2 col-md-3 col-sm-4">
-                    <img src="./img/Volumen_1 (2).webp" alt="Chainsaw Man #1 portada">
-                    <h3>chainsaw man #1</h3>
-                    <h4>$1000</h4>
-                </li>
-            </ul>
+            <div class="lista">
+                <div class="card text-center" style="width: 18rem;">
+                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
+                        alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Death Note #10</h5>
+                        <p class="card-text text-truncate">
+                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
+                            lleva
+                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
+                            Todo
+                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
+                            confiere
+                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
+                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
+                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
+                            que
+                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
+                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
+                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
+                            descubrir su
+                            verdadera identidad.
+                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
+                            2006,
+                            totalizando 12 tomos.
+                        </p>
+                        <button type="button" class="btn btn-outline-primary">
+                            <a href="">$1500</a>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="card text-center" style="width: 18rem;">
+                    <img src="./img/god-of-war-ragnarok-20221131016774_1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">God of War Ragnarok</h5>
+                        <p class="card-text text-truncate">
+                            Desde Santa Monica Studio llega la secuela del aclamado por la crítica God of War (2018).
+                            Fimbulvetr ya está en camino. Kratos y Atreus deben viajar a cada uno de los nueve reinos en
+                            búsqueda de respuestas, mientras que las fuerzas asgardianas se preparan para una batalla
+                            profetizada que terminará con el mundo. En el camino explorarán paisajes increíbles y
+                            míticos, y se enfrentarán a aterradores enemigos en la forma de dioses nórdicos y monstruos.
+                            La amenaza del Ragnarök cada vez está más cerca. Kratos y Atreus deben elegir entre su
+                            propia seguridad y la seguridad de los reinos
+                        </p>
+                        <button type="button" class="btn btn-outline-primary">
+                            <a href="">$1500</a>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="card text-center" style="width: 18rem;">
+                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
+                        alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Death Note #10</h5>
+                        <p class="card-text text-truncate">
+                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
+                            lleva
+                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
+                            Todo
+                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
+                            confiere
+                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
+                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
+                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
+                            que
+                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
+                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
+                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
+                            descubrir su
+                            verdadera identidad.
+                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
+                            2006,
+                            totalizando 12 tomos.
+                        </p>
+                        <button type="button" class="btn btn-outline-primary">
+                            <a href="">$1500</a>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="card text-center" style="width: 18rem;">
+                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
+                        alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Death Note #10</h5>
+                        <p class="card-text text-truncate" style="max-width: 300px;" >
+                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
+                            lleva
+                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
+                            Todo
+                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
+                            confiere
+                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
+                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
+                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
+                            que
+                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
+                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
+                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
+                            descubrir su
+                            verdadera identidad.
+                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
+                            2006,
+                            totalizando 12 tomos.
+                        </p>
+                        <button type="button" class="btn btn-outline-primary">
+                            <a href="">$1500</a>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="card text-center" style="width: 18rem;">
+                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
+                        alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Death Note #10</h5>
+                        <p class="card-text text-truncate">
+                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
+                            lleva
+                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
+                            Todo
+                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
+                            confiere
+                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
+                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
+                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
+                            que
+                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
+                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
+                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
+                            descubrir su
+                            verdadera identidad.
+                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
+                            2006,
+                            totalizando 12 tomos.
+                        </p>
+                        <button type="button" class="btn btn-outline-primary">
+                            <a href="">$1500</a>
+                        </button>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
