--- a/paginas/juegosdecartas.html
+++ b/paginas/juegosdecartas.html
@@ -75,10 +75,10 @@
 
             <div class="lista">
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
-                        alt="...">
+                    <img src="../img/sp_n1McLdPFBg.png" class="card-img-top"
+                        alt="magic the gathering portada">
                     <div class="card-body">
-                        <h5 class="card-title">Death Note #10</h5>
+                        <h5 class="card-title">Magic the Gathering</h5>
                         <p class="card-text text-truncate">
                             La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
                             lleva
@@ -117,68 +117,6 @@
                             míticos, y se enfrentarán a aterradores enemigos en la forma de dioses nórdicos y monstruos.
                             La amenaza del Ragnarök cada vez está más cerca. Kratos y Atreus deben elegir entre su
                             propia seguridad y la seguridad de los reinos
-                        </p>
-                        <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
-                        </button>
-                    </div>
-                </div>
-
-                <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
-                        alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Death Note #10</h5>
-                        <p class="card-text text-truncate">
-                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
-                            lleva
-                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
-                            Todo
-                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                            confiere
-                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
-                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
-                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
-                            que
-                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
-                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
-                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                            descubrir su
-                            verdadera identidad.
-                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
-                            2006,
-                            totalizando 12 tomos.
-                        </p>
-                        <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
-                        </button>
-                    </div>
-                </div>
-
-                <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
-                        alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Death Note #10</h5>
-                        <p class="card-text text-truncate" style="max-width: 300px;" >
-                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
-                            lleva
-                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
-                            Todo
-                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                            confiere
-                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
-                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
-                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
-                            que
-                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
-                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
-                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                            descubrir su
-                            verdadera identidad.
-                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
-                            2006,
-                            totalizando 12 tomos.
                         </p>
                         <button type="button" class="btn btn-outline-primary">
                             <a href="">$1500</a>
