--- a/paginas/manga.html
+++ b/paginas/manga.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <meta name="description" content="Encontrá tus mangas favoritos en XEROX a los mejores precios. Envios a todo el país.">
-    <meta name="keywords" content="manga, mangas, dragon ball, one piece, manga shonen, manga shoujo, manga peleas, death note, bleach">
+    <meta name="description"
+        content="Encontrá tus mangas favoritos en XEROX a los mejores precios. Envios a todo el país.">
+    <meta name="keywords"
+        content="manga, mangas, dragon ball, one piece, manga shonen, manga shoujo, manga peleas, death note, bleach">
     <title>XEROX | Mangas</title>
 </head>
 
@@ -75,8 +77,8 @@
 
             <div class="lista">
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
-                        alt="...">
+                    <img src="../img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
+                        alt="death note portada">
                     <div class="card-body">
                         <h5 class="card-title">Death Note #10</h5>
                         <p class="card-text text-truncate">
@@ -106,9 +108,10 @@
                 </div>
 
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/god-of-war-ragnarok-20221131016774_1.jpg" class="card-img-top" alt="...">
+                    <img src="../img/bleachremix011-db5742e66babce6afa16730621958737-640-0.webp" class="card-img-top"
+                        alt="bleach portada">
                     <div class="card-body">
-                        <h5 class="card-title">God of War Ragnarok</h5>
+                        <h5 class="card-title">Bleach Remix #1</h5>
                         <p class="card-text text-truncate">
                             Desde Santa Monica Studio llega la secuela del aclamado por la crítica God of War (2018).
                             Fimbulvetr ya está en camino. Kratos y Atreus deben viajar a cada uno de los nueve reinos en
@@ -125,10 +128,10 @@
                 </div>
 
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
-                        alt="...">
+                    <img src="../img/Volumen_1.webp" class="card-img-top"
+                        alt="one piece portada">
                     <div class="card-body">
-                        <h5 class="card-title">Death Note #10</h5>
+                        <h5 class="card-title">One Piece #1</h5>
                         <p class="card-text text-truncate">
                             La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
                             lleva
@@ -156,11 +159,11 @@
                 </div>
 
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
-                        alt="...">
+                    <img src="../img/Volumen_1 (2).webp" class="card-img-top"
+                        alt="chainsaw man portada">
                     <div class="card-body">
-                        <h5 class="card-title">Death Note #10</h5>
-                        <p class="card-text text-truncate" style="max-width: 300px;" >
+                        <h5 class="card-title">Chainsaw-Man #1</h5>
+                        <p class="card-text text-truncate" style="max-width: 300px;">
                             La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
                             lleva
                             una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
@@ -187,10 +190,10 @@
                 </div>
 
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
-                        alt="...">
+                    <img src="../img/Volumen_1 (1).webp" class="card-img-top"
+                        alt="vinland saga portada">
                     <div class="card-body">
-                        <h5 class="card-title">Death Note #10</h5>
+                        <h5 class="card-title">Vinland Saga #1</h5>
                         <p class="card-text text-truncate">
                             La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
                             lleva
